docs/examples/valid/switch/nestedSwitch.wacc
begin
  int x = 2;
	x = x + 3;
  switch x
		case 4:
			println "4"
		case (1+1+1+1+1):
			switch false
	      case true:
	        println true
	      case false:
					int result = 50;
	        println result
			fi
		case (1+5):
			println "6"
    default:
      println "Default"
	fi
end
