docs/examples/invalid/syntaxErr/extension/switch/noStatSwitch.wacc
begin
  switch 5
		case 4:
    default:
      println "Default"
    fi
end
